Fix spacing for tags with no image, remove unneeded icon file

--- a/styles/dept.css
+++ b/styles/dept.css
@@ -238,6 +238,11 @@ html.casper .grid-wrapper .post-card {
   padding-right: 0;
 }
 
+html.casper .no-image .post-card-primary-tag {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
 /* Filter Tags */
 .filter-tags {
   display: flex;
